@@ -32,13 +32,13 @@ test -z "$AUTOHEADER" && AUTOHEADER=autoheader
 }
 
 if test -z "$AUTOMAKE"; then
-  if automake-1.7 --version < /dev/null > /dev/null 2>&1; then
-    AUTOMAKE=automake-1.7
-    ACLOCAL=aclocal-1.7
+  if automake --version < /dev/null > /dev/null 2>&1; then
+    AUTOMAKE=automake
+    ACLOCAL=aclocal
   else
     echo
     echo "You must have automake installed to compile $PROJECT."
-    echo "Get ftp://ftp.gnu.org/pub/gnu/automake/automake-1.7.6.tar.gz"
+    echo "Get ftp://ftp.gnu.org/pub/gnu/automake/automake-1.8.5.tar.gz"
     echo "(or a newer version if it is available)"
     DIE=1
   fi
