@@ -1,3 +1,9 @@
+2004-07-26  Johan Dahlin  <johan@gnome.org>
+
+	* autogen.sh: Don't hardcode automake-1.7, Fixes #148377
+
+	* gtk/__init__.py: Readd _gobject, but warn if it's used
+
 2004-07-25  John Finlay  <finlay@moeraki.com>
 
 	* gtk/pygtktreemodel.c (pygtk_generic_tree_model_get_value)
